--- a/luyentap2/7.html
+++ b/luyentap2/7.html
@@ -8,10 +8,10 @@
 <script>
 function trans(a,b){
     let temp;
-    a=temp;
+    temp=a;
     a=b;
     b=temp;
-    document.write("a=" + a + "b=" + b)
+    document.write("a=" + a + " b=" + b)
 }
 let num1=+prompt("Nhập vào số nguyên a");
 let num2=+prompt("Nhập vào số nguyên b");
